--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ need to close the tag, has not got any spaces in it using underscores rather tha
 </table>   </center> </p>
 
 <video controls>  
-  <source src="NGCML.mp4" type="video/mp4">  
+  <source src="fri.mp4" type="video/mp4">  
 </video>  
 
 
