--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <p> &#128073;compliance with widely accepted HTML standards it ought to 
 contain a bit more structure so put this in for a start all HTML 
-documents should begin by declaring their document type to be HTML so a browser is certain about the type of content they contain and to do this we
+documents should begin by declaring their document type to be HTML so a browser is certain about the type of content they contain and <br> to do this we
 need to add a declaration tag and the very start of a document before our HTML code begins so we'll put it         <font size="5" color="green"><pre> &lt;!DOCTYPE html&gt; </pre></font> 
 with that exclamation part  </p>
 
@@ -68,8 +68,7 @@ need to enter a link address in close quotes and then close off that part of the
 <font size="5" color="green"><pre> &lt;a href="https://www.youtube.com/watch?v=WwNuvGLblJU&t=461s"&gt;</pre> </font>
 
 <p> &#128073;To add an image to web page and to that effect over in the folder were working from either putted that IMG thick image then we have
-an SRC for source equals and then we have to tell it the "image  dot jpg" and then we just
-need to close the tag, has not got any spaces in it using underscores rather than spaces anyway  scaling but still that image is a rather big on our on our web page , can put some instructions  a height and the width of the image so we do say a widths ** must .jpg file </p> 
+an SRC for source equals and then  <br> we have to tell it the "image  dot jpg" and then we just need to close the tag, has not got any spaces in it using underscores rather than spaces anyway  scaling but still that image is a rather big on our on our web page , can put some instructions  a height and the width of the image so we do say a widths ** must .jpg file </p> 
 </p>
 
 <p> 
@@ -100,7 +99,7 @@ embed and copy that code and go back to our document and pasted in we get the HT
 <p> &#128073;add a map, go to a Google Maps, go to the menu and down here on the menu somewhere there is a share or embed a map and we want to embed a
 map and we want a copy HTML and we go back to our document again and you don't need to put all these things </p>
 
-<p> <font size="5" color="green"><pre> &lt;iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3817.9422135854456!2d96.11021167469343!3d16.878752883924307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c19452f537203d%3A0xd0c45df6ad9f577f!2sGyo%20Gone%20Bus%20Stop!5e0!3m2!1sen!2smm!4v1689696927206!5m2!1sen!2smm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe
+<p> <font size="5" color="green"><pre> &lt;iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3817.9422135854456!2d96.11021167469343!3d16.878752883924307!2m3!1f0!2f0!3f0!3m2!1 <br> i1024!2i768!4f13.1!3m3!1m2!1s0x30c19452f537203d%3A0xd0c45df6ad9f577f!2sGyo%20Gone%20Bus%20Stop!5e0!3m2!1sen!2smm!<br> 4v1689696927206!5m2!1sen!2smm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe
 ;</pre> </font></p>
 
 <center> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3817.9422135854456!2d96.11021167469343!3d16.878752883924307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c19452f537203d%3A0xd0c45df6ad9f577f!2sGyo%20Gone%20Bus%20Stop!5e0!3m2!1sen!2smm!4v1689696927206!5m2!1sen!2smm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
